address review comments
Signed-off-by: Cody Cutrer <cody@cutrer.us>